<resources>
    <string name="app_name">A&amp;A</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Pastor Biography</string>
    <string name="title_section3">Saved From What</string>
    <string name="title_section4">Statement of Faith</string>
    <string name="title_section5">Photo Gallery</string>
    <string name="title_section6">Events Calendar</string>
    <string name="title_section7">Audio/Video</string>
    <string name="title_section8">Service Times</string>
    <string name="title_section9">Contact Info</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="header_1">Dear Friend,</string>
    <string name="paragraph_1">I would like to welcome
    you to the website of Provisions for the Redeemed
    Christian Center (aka Vernessa Walker Ministries).
    I’m so glad you decided to visit. I’m so excited about
    the opportunity to charge the atmosphere with the word of God.
    If you are looking for a unique place to increase your knowledge
    in God’s word and find your place in God’s plan, then prayerfully
    consider this church a place to call home.</string>
    <string name="header_2">Church Vision</string>
    <string name="paragraph_2">The vision of Provisions
        for the Redeemed Christian Center (aka Vernessa Walker Ministries)
        is to teach the Word of God to the extent that all who hear will see
        and experience change in their lives. Changes to include healing,
        deliverance, prosperity, strength and all that God has offer.
        To teach God’s people how to tap into the spiritual realm of
        whom God is and why we worship him.</string>
    <string name="header_3">Pastor Vernessa F. Walker</string>
    <string name="paragraph_3">Pastor Walker is the founder of Provisions for the Redeemed Christian
        Center aka Vernessa Walker Ministries.
        She is the author of the book, ”It’s Time To Claim Your Promise”. She has hosted her own
        television and radio programs called Provisions for the Redeemed.
        She was born again and baptized at the age twelve at Big Indian Creek Primitive Baptist Church.
        Under the leadership of Elder Michael Hartwell in July 1988 she preached her first sermon.
        While there she held a position of Associate Minister, Sunday School teacher, Youth Advisor
        and participated in Prison Ministry. She implemented Children’s Church for Indian Creek as
        well as other sister churches. She is the seventh of eight children. She was born to Johnie
        Walker and Ida Mae Pride Walker. She attended the University of Alabama in Huntsville and
        Athens State College. She has a Bachelor’s of Science degree in Business Administration with
        a minor in Procurement and Acqusition Management. She also has a Master’s Degree in Theology.</string>
    <string name="header_4">Saved From What</string>
    <string name="header_5">Statement of Faith</string>
    <string name="paragraph_5">We believe that there is one God revealed in three persons; Father, Son and Holy Spirit, which is the creator of all things.

We believe that Jesus Christ is both divine and human. That he is of God and came in the flesh through virgin birth.

We believe in the bodily resurrection of Jesus Christ, that he was crucified, died, buried, resurrected, ascended to the Father, interceding for the saints and will return to rapture his church and judge the world.

We believe salvation is gained through repentance of sin by the grace of and the redemptive power of the blood of Jesus Christ.

We believe that believers should seek to exalt our Lord through sanctification, the Word and walking in holiness.

We believe that through the redemptive work we were given access to divine healing.

We believe in the water baptism and the baptism in the Holy Spirit with evidence of speaking in tongues, which is available to all believers, as well as the gifts of the Spirit.

We believe that all scripture, both Old and New Testament is the inspired Word of God.

</string>
    <string name="header_6">About The Ministry</string>
    <string name="paragraph_6">Provisions for the Redeemed Christian Center (aka Vernessa Walker Ministries) are a Word of God and Faith based ministry. We are open to all races. We are located in Huntsville, Alabama.</string>
</resources>